{
    "name": "InputMap",
    "maps": [
        {
            "name": "Touchscreen",
            "id": "1a6ae6d2-0d55-42fa-9523-6a3c576a15c1",
            "actions": [
                {
                    "name": "TouchDelta",
                    "type": "PassThrough",
                    "id": "97749a0f-56ce-42a9-90d4-8e4ac93e536d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "ec0acd8e-0259-4800-8790-ceb498b3d065",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TouchPosition",
                    "type": "PassThrough",
                    "id": "5e05d69a-61ad-44ef-ad50-f9a15e7c402d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d59c9bfc-e574-4ca4-98f7-6adbc6a5dfe2",
                    "path": "<Touchscreen>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "45d37184-689a-4a43-8c82-01aef3095a6c",
                    "path": "<Touchscreen>/touch*/Press",
                    "interactions": "Press(behavior=2),MultiTap",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6ad9a1ba-1c01-4185-8e77-a1d53136633c",
                    "path": "<Touchscreen>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPosition",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Mouse",
            "id": "d97ae1a6-5aef-4c9d-b457-c9eae1e0a046",
            "actions": [
                {
                    "name": "MouseDelta",
                    "type": "Value",
                    "id": "3c627ba2-fa6f-4c9c-a714-2bb679fd24f7",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "709a1507-2e94-4946-98c9-e6e28303e02a",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseDelta",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}